[EFL][AC] Fix bugs preventing us from running layout tests with AC turned on https://bugs.webkit.org/show_bug.cgi?id=100598

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-10-29
Reviewed by Kenneth Rohde Christiansen.

Make sure to use opengl_x11 engine when AC is turned on and X11 is in use.
We cannot create a gl context otherwise.

* MiniBrowser/efl/main.c:
(elm_main):
* WebKitTestRunner/efl/PlatformWebViewEfl.cpp:
(WTR::initEcoreEvas):
* DumpRenderTree/efl/DumpRenderTree.cpp:
(initEcoreEvas):
* EWebLauncher/efl/main.c:
(windowCreate):

Canonical link: https://commits.webkit.org/118702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132799 268f45cc-cd09-0410-ab3c-d52691b4dbfc